sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:17: error: not found: value swapped
  } while (swapped);
           ^